--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,68 @@
-* { margin: 0; padding: 0; box-sizing: border-box; }
-body { font: 13px Helvetica, Arial; }
-form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-form input { border: 0; padding: 10px; width: 90%; margin-right: 0.5%; }
-form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-#messages { list-style-type: none; margin: 0; padding: 0; }
-#messages li { padding: 5px 10px; }
-#messages li:nth-child(odd) { background: #eee; }
-
-#wantMore{
-  position:absolute;
-  top:0;
-  right:0;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body {
+  color: white;
+  background: #000;
+  font: 13px Helvetica, Arial;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+}
+
+aside {
+  flex-basis: 25%;
+}
+
+main {
+  position: relative;
+  flex-basis: 75%;
+}
+
+form {
+  color: black;
+  padding: 3px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+form > * {
+  color: black;
+}
+form input {
+  width: 100%;
+  border: 0;
+  padding: 10px;
+}
+form button {
+  flex-basis: 5rem;
+  background: #82e0ff;
+  border: none;
+  padding: 0.5rem 0;
+}
+
+#messages {
+  list-style-type: none;
+}
+#messages li {
+  padding: 5px 10px;
+}
+#messages li:nth-child(odd) {
+  background: #444;
+}
+
+#wantMore {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/*# sourceMappingURL=style.css.map */
