--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,50 @@ ul {
   list-style-type: none;
 }
 
+html {
+  font-size: 16px;
+}
+
+body {
+  background: white;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  line-height: 1.75;
+  color: #000000;
+}
+
+h1, h2, h3, h4, h5 {
+  margin: 3rem 0 1.38rem;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 3.052rem;
+}
+
+h2 {
+  font-size: 2.441rem;
+}
+
+h3 {
+  font-size: 1.953rem;
+}
+
+h4 {
+  font-size: 1.563rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+span.time {
+  font-size: 0.7rem;
+}
+
 #messages {
   height: calc(100% - 3rem);
   overflow: auto;
@@ -23,13 +67,15 @@ ul {
 #messages li {
   display: flex;
   flex-direction: row;
-  padding: 0.5rem 0.8rem;
+  align-items: center;
+  padding: 0.5rem 2rem;
 }
 #messages li:nth-child(odd) {
   background: #444;
 }
 
 .dropdown {
+  margin-bottom: 0;
   margin-left: auto;
   position: relative;
 }
@@ -81,7 +127,6 @@ form button {
 body {
   color: white;
   background: black;
-  font: 13px Helvetica, Arial;
 }
 body .wrapper {
   display: flex;
@@ -107,6 +152,13 @@ aside h1 {
   position: absolute;
   top: 0;
   right: 0;
+}
+
+span.time {
+  opacity: 0.6;
+  margin-left: 0.3rem;
+  margin-bottom: -4px;
+  align-self: end;
 }
 
 /*# sourceMappingURL=style.css.map */
