--- a/static/scss/_form.scss
+++ b/static/scss/_form.scss
@@ -13,7 +13,6 @@ form {
     padding:0 0.5rem; //bit of padding on sides
     width:100%;
   } 
-  button { 
-    flex-basis:5rem;
-} }
+  button { flex-basis:5rem; } 
+}
 
