--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,22 +21,19 @@ html {
 }
 
 body {
-  background: white;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Ubuntu", "sans-serif";
   font-weight: 400;
   line-height: 1.75;
-  color: #000000;
 }
 
 h1, h2, h3, h4, h5 {
   margin: 3rem 0 1.38rem;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Ubuntu", "sans-serif";
   font-weight: 400;
   line-height: 1.3;
 }
 
 h1 {
-  margin-top: 0;
   font-size: 3.052rem;
 }
 
@@ -79,30 +76,28 @@ span.time {
   margin-left: auto;
   position: relative;
 }
-.dropdown:hover {
-  cursor: pointer;
-}
 .dropdown > .options:hover {
+  cursor: pointer;
   opacity: 0.7;
 }
 .dropdown > .operations {
   position: absolute;
   top: 110%;
-  left: -1rem;
-  width: 4;
-  height: 5rem;
+  left: -3rem;
+  width: auto;
+  height: auto;
   overflow: auto;
   display: none;
   z-index: 999;
 }
 .dropdown > .operations > .delete, .dropdown > .operations .update {
-  padding: 0.5rem;
+  padding: 0.3rem;
 }
 .dropdown > .operations > .delete {
-  background-color: red;
+  background-color: #681010;
 }
 .dropdown > .operations > .update {
-  background-color: blue;
+  background-color: #3434a2;
 }
 
 form {
@@ -132,7 +127,6 @@ body .wrapper {
   display: flex;
   flex-direction: row;
   height: 100vh;
-  overflow: auto;
 }
 
 main {
@@ -146,6 +140,7 @@ aside {
 }
 aside h1 {
   color: orange;
+  text-align: center;
 }
 
 #wantMore {
