--- a/static/scss/_messages.scss
+++ b/static/scss/_messages.scss
@@ -8,20 +8,14 @@
     @include flexcenter;
     align-items:center;
     padding: 0.5rem 2rem;
-    &:nth-child(odd) { 
-      background: $liOddBg;
-}}}
+    &:nth-child(odd) { background: $liOddBg; }
+}}
 
 .dropdown{
   margin-bottom:0;
   margin-left:auto;
   position:relative;
-  &:hover{
-  cursor:pointer;
-}
-  > .options:hover{
-    opacity:0.7;
-  }
+  > .options:hover{ cursor:pointer; opacity:0.7; }
   > .operations {
     position:absolute;
     top:110%;
@@ -31,9 +25,7 @@
     overflow:auto;
     display:none;
     z-index:999;
-  > .delete, .update {
-   padding:0.5rem;
-  }
-  > .delete{background-color:$delete }
-  > .update{background-color:$update }
+  > .delete, .update { padding:0.3rem; }
+  > .delete{ background-color:$delete }
+  > .update{ background-color:$update }
   }}
