--- a/static/scss/_font.scss
+++ b/static/scss/_font.scss
@@ -21,3 +21,5 @@ h3 {font-size: 1.953rem;}
 h4 {font-size: 1.563rem;}
 h5 {font-size: 1.25rem;}
 span.time { font-size: 0.70rem; }
+
+form button {font-variant:small-caps}
