--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -14,5 +14,5 @@ $update:#3434a2;
 $formC:black;
 $liOddBg:#444; 
 $inputBg:white;
-$h1Color:orange;
+$orange:#e1a22e;
 $formBtnBg:rgb(130, 224, 255);
