--- a/static/scss/_resets.scss
+++ b/static/scss/_resets.scss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 input, button { border:none }
+button {cursor:pointer}
 a {text-decoration:none}
 ul {list-style-type:none}
 
